--- a/style.css
+++ b/style.css
@@ -165,6 +165,13 @@ header nav ul li a:hover {
     display: flex;
     justify-content: space-between;
 }
+.sk {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap: 5px;
+}
 .skills div {
     width: 45%; 
 }
